--- a/www/view/Home.view.xml
+++ b/www/view/Home.view.xml
@@ -2,12 +2,91 @@
    controllerName="pae.logistica.controller.Home"
    xmlns="sap.m"
    xmlns:mvc="sap.ui.core.mvc"
+   xmlns:f="sap.ui.layout.form"
+   xmlns:l="sap.ui.layout"
+   xmlns:core="sap.ui.core"
+   async="true"
    id="home">
-    <Page title="Subir foto">
-        <Panel>
-            <Input  id="uid" placeholder="User ID"></Input>
-            <Input  id="pasw" placeholder="Password" type="Password"></Input>
-            <Button width="100%" text="Login" type="Emphasized" press="onPress"></Button>
-        </Panel>
+    <Page>
+        <VBox class="sapUiSmallMargin">
+		<f:SimpleForm id="SimpleFormChange480_12120"
+			editable="true"
+			layout="ResponsiveGridLayout"
+			title="Reportar incidente"
+			labelSpanXL="4"
+			labelSpanL="4"
+			labelSpanM="12"
+			labelSpanS="12"
+			adjustLabelSpan="false"
+			emptySpanXL="0"
+			emptySpanL="0"
+			emptySpanM="0"
+			emptySpanS="0"
+			columnsXL="2"
+			columnsL="2"
+			columnsM="1"
+			singleContainerFullSize="false" >
+			<f:content>
+				<core:Title text="Office" />
+				<Label text="Name" />
+				<Input value="{SupplierName}" />
+				<Label text="Street/No." />
+				<Input value="{Street}">
+				</Input>
+				<Input value="{HouseNumber}">
+					<layoutData>
+						<l:GridData span="XL2 L3 M4 S4" />
+					</layoutData>
+				</Input>
+				<Label text="ZIP Code/City" />
+				<Input value="{ZIPCode}">
+					<layoutData>
+						<l:GridData span="XL2 L3 M4 S4" />
+					</layoutData>
+				</Input>
+				<Input value="{City}" />
+				<Label text="Country" />
+				<Select id="country" selectedKey="{Country}">
+					<items>
+						<core:Item text="England" key="England"/>
+						<core:Item text="Germany" key="Germany"/>
+						<core:Item text="USA" key="USA"/>
+					</items>
+				</Select>
+				<core:Title text="Online" />
+				<Label text="Web" />
+				<Input value="{Url}" type="Url" />
+				<Label text="Twitter" />
+				<Input value="{Twitter}" />
+			</f:content>
+		</f:SimpleForm>
+		<f:SimpleForm id="SimpleFormChange480_12120-2"
+			editable="true"
+			layout="ResponsiveGridLayout"
+			title="More"
+			labelSpanXL="4"
+			labelSpanL="4"
+			labelSpanM="12"
+			labelSpanS="12"
+			adjustLabelSpan="false"
+			emptySpanXL="0"
+			emptySpanL="0"
+			emptySpanM="0"
+			emptySpanS="0"
+			columnsXL="2"
+			columnsL="2"
+			columnsM="1"
+			singleContainerFullSize="false">
+			<f:content>
+				<core:Title text="Contact data" />
+				<Label text="Email" />
+				<Input value="{EMail}" type="Email" />
+				<Label text="Tel." />
+				<Input value="{Tel}" type="Tel" />
+				<Label text="SMS" />
+				<Input value="{Sms}" type="Tel" />
+			</f:content>
+		</f:SimpleForm>
+	</VBox>
     </Page>
 </mvc:View>
