Primera version POC

--- a/www/view/App.view.xml
+++ b/www/view/App.view.xml
@@ -11,7 +11,7 @@
                         <items>
                               <Input  width="50%" id="UserID" placeholder="User ID"></Input>
                               <Input  width="50%" id="Password" placeholder="Password" type="Password"></Input>
-                              <Button width="50%" text="Login" type="Emphasized" press="onLogin"></Button>
+                              <Button width="50%" id="Login" text="Login" type="Emphasized" press="onLogin" enabled="true"></Button>
                         </items>
                   </VBox>
             </content>
